--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.4</version>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
         </dependency>
 
         <dependency>
