--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,10 @@
             <version>4.12</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.5</version>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
